# seaborn_objects_recipes

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  test.ipynb  test_main.py
.github/workflows/: actions.yml
docs/tutorial/: example_data.csv  example_data_fine.csv  example_data_lower.csv  recipes_tut.ipynb
mylib/: line_label.py
seaborn_objects_recipes/: __init__.py
seaborn_objects_recipes/recipes/: line_label.py  lowess.py  plotting.py  rolling.py  straight_line.py
